--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.csharp linguist-detectable=true
+*.php linguist-detectable=true
 *.java linguist-detectable=false
 *.js linguist-detectable=false
 *.html linguist-detectable=false
