--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
 *.css linguist-detectable=false
+*.scss linguist-detectable=false
+
